# Web-Scraper

./: config.yaml  pyproject.toml
src/web_intel/: __init__.py
src/web_intel/answer_generator/: __init__.py  generator.py
src/web_intel/browser/: __init__.py  actions.py  manager.py  page_context.py
src/web_intel/cli/: __init__.py  main.py
src/web_intel/config/: __init__.py  loader.py  settings.py
src/web_intel/core/: __init__.py  exceptions.py
src/web_intel/crawler/: __init__.py  filters.py  orchestrator.py  queue.py  rate_limiter.py
src/web_intel/crawler/exploration/: __init__.py  agent.py  element_analyzer.py  navigation_patterns.py  state_tracker.py
src/web_intel/embeddings/: __init__.py  embedder.py
src/web_intel/extraction/: __init__.py  content_extractor.py  metadata_extractor.py  page_parser.py
src/web_intel/graph_store/: __init__.py  queries.py  store.py
src/web_intel/llm/: __init__.py  local_llm.py  prompt_templates.py
src/web_intel/memory_store/: __init__.py  context.py  store.py
src/web_intel/navigation_agent/: __init__.py  agent.py  planner.py
src/web_intel/query_executor/: __init__.py  executor.py  ranker.py
src/web_intel/query_parser/: __init__.py  expander.py  parser.py
src/web_intel/storage/: __init__.py  database.py  models.py  repositories.py  schema.py
src/web_intel/understanding/: __init__.py  chunker.py  page_understanding.py
src/web_intel/utils/: __init__.py  logging.py  metrics.py
src/web_intel/vector_store/: __init__.py  index.py  store.py
tests/: __init__.py  conftest.py  test_answer_generator.py  test_chunker.py  test_cli.py  test_config.py  test_crawler.py  test_database.py  test_embeddings.py  test_exceptions.py  test_extraction.py  test_integration.py  test_navigation_agent.py  test_prompt_regression.py  test_query_executor.py  test_query_parser.py  test_queue.py  test_rate_limiter.py  test_vector_index.py
